--- a/requirements.txt
+++ b/requirements.txt
@@ -6,20 +6,26 @@ autopep8=1.6.0=pyhd8ed1ab_1
 beautifulsoup4=4.11.1=pyha770c72_0
 bzip2=1.0.8=h3422bc3_4
 ca-certificates=2022.6.15=h4653dfc_0
+dj-database-url=0.5.0=py_0
 django=4.0=pyhd8ed1ab_1
 django-bootstrap5=21.3=pyhd8ed1ab_0
+django-heroku=0.3.1=pyhd8ed1ab_2
 django-widget-tweaks=1.4.5=py_0
 flake8=4.0.1=pyhd8ed1ab_2
 freetype=2.10.4=h17b34a0_1
 giflib=5.2.1=h27ca646_2
+gunicorn=20.1.0=py39h2804cbe_2
 importlib-metadata=2.0.0=py_1
 jpeg=9e=he4db4b2_2
+krb5=1.19.3=he492e65_0
 lcms2=2.12=had6a04f_0
 lerc=3.0=hbdafb3b_0
 libcxx=14.0.6=h04bba0f_0
 libdeflate=1.12=he4db4b2_0
+libedit=3.1.20191231=hc8eb9b7_2
 libffi=3.4.2=h3422bc3_5
 libpng=1.6.37=h2c9beb0_3
+libpq=14.4=hd0d3353_0
 libtiff=4.4.0=hcbbed22_1
 libwebp=1.2.2=h0d20362_0
 libwebp-base=1.2.2=h3422bc3_1
@@ -32,9 +38,10 @@ mysql-libs=8.0.29=h13128d0_1
 mysqlclient=2.0.3=py39h0ef5a74_3
 ncurses=6.3=h07bb92c_1
 openjpeg=2.4.0=h062765e_1
-openssl=3.0.5=ha287fd2_0
+openssl=3.0.5=h7aea29f_1
 pillow=9.2.0=py39h1b8be2f_0
 pip=22.1.2=pyhd8ed1ab_0
+psycopg2=2.9.3=py39h608e896_0
 pthread-stubs=0.4=h27ca646_1001
 pycodestyle=2.8.0=pyhd8ed1ab_0
 pyflakes=2.4.0=pyhd8ed1ab_0
@@ -51,9 +58,12 @@ toml=0.10.2=pyhd8ed1ab_0
 typing_extensions=4.3.0=pyha770c72_0
 tzdata=2022a=h191b570_0
 wheel=0.37.1=pyhd8ed1ab_0
+whitenoise=6.2.0=pyhd8ed1ab_0
 xorg-libxau=1.0.9=h27ca646_0
 xorg-libxdmcp=1.1.3=h27ca646_0
 xz=5.2.5=h642e427_1
 zipp=3.8.0=pyhd8ed1ab_0
 zlib=1.2.12=ha287fd2_1
 zstd=1.5.2=hd705a24_2
+psycopg2==2.7.6.1
+
