--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.5.2
 autopep8==1.6.0
 beautifulsoup4==4.11.1
-bzip2==1.0.8
+# bzip2==1.0.8
 ca-certificates==2022.6.15
 dj-database-url==0.5.0
 django==4.0
