--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ django-bootstrap5==21.3
 django-heroku==0.3.1
 django-widget-tweaks==1.4.5
 flake8==4.0.1
-freetype==2.10.4
+# freetype==2.10.4
 giflib==5.2.1
 gunicorn==20.1.0
 importlib-metadata==2.0.0
