--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ importlib-metadata==2.0.0
 # jpeg==9e
 # krb5==1.19.3
 # lcms2==2.12
-lerc==3.0
+# lerc==3.0
 libcxx==14.0.6
 libdeflate==1.12
 libedit==3.1.20191231
