--- a/requirements.txt
+++ b/requirements.txt
@@ -17,19 +17,19 @@ importlib-metadata==2.0.0
 # krb5==1.19.3
 # lcms2==2.12
 # lerc==3.0
-libcxx==14.0.6
-libdeflate==1.12
-libedit==3.1.20191231
-libffi==3.4.2
-libpng==1.6.37
-libpq==14.4
-libtiff==4.4.0
-libwebp==1.2.2
-libwebp-base==1.2.2
-libxcb==1.13
-libzlib==1.2.12
-lz4-c==1.9.3
-mccabe==0.6.1
+# libcxx==14.0.6
+# libdeflate==1.12
+# libedit==3.1.20191231
+# libffi==3.4.2
+# libpng==1.6.37
+# libpq==14.4
+# libtiff==4.4.0
+# libwebp==1.2.2
+# libwebp-base==1.2.2
+# libxcb==1.13
+# libzlib==1.2.12
+# lz4-c==1.9.3
+# mccabe==0.6.1
 mysql-common==8.0.29
 mysql-libs==8.0.29
 mysqlclient==2.0.3
