--- a/requirements.txt
+++ b/requirements.txt
@@ -30,8 +30,8 @@ importlib-metadata==2.0.0
 # libzlib==1.2.12
 # lz4-c==1.9.3
 # mccabe==0.6.1
-mysql-common==8.0.29
-mysql-libs==8.0.29
+# mysql-common==8.0.29
+# mysql-libs==8.0.29
 mysqlclient==2.0.3
 ncurses==6.3
 openjpeg==2.4.0
