--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ mysqlclient==2.0.3
 pillow==9.2.0
 pip==22.1.2
 psycopg2==2.9.3
-pthread-stubs==0.4
+# pthread-stubs==0.4
 pycodestyle==2.8.0
 pyflakes==2.4.0
 python==3.9.13
