--- a/requirements.txt
+++ b/requirements.txt
@@ -43,23 +43,23 @@ psycopg2==2.9.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
 # python==3.9.13
-python_abi==3.9
-pytz==2022.1
-readline==8.1.2
-setuptools==63.1.0
-soupsieve==2.3.1
-sqlite==3.39.0
-sqlparse==0.4.2
-tk==8.6.12
-toml==0.10.2
-typing_extensions==4.3.0
-tzdata==2022a
+# python_abi==3.9
+# pytz==2022.1
+# readline==8.1.2
+# setuptools==63.1.0
+# soupsieve==2.3.1
+# sqlite==3.39.0
+# sqlparse==0.4.2
+# tk==8.6.12
+# toml==0.10.2
+# typing_extensions==4.3.0
+# tzdata==2022a
 wheel==0.37.1
-whitenoise==6.2.0
-xorg-libxau==1.0.9
-xorg-libxdmcp==1.1.3
-xz==5.2.5
-zipp==3.8.0
-zlib==1.2.12
-zstd==1.5.2
+# whitenoise==6.2.0
+# xorg-libxau==1.0.9
+# xorg-libxdmcp==1.1.3
+# xz==5.2.5
+# zipp==3.8.0
+# zlib==1.2.12
+# zstd==1.5.2
 psycopg2==2.7.6.1
